# ucc

./: configure.ac
.github/workflows/: codestyle.yaml
config/m4/: urom.m4
src/: Makefile.am
src/coll_score/: ucc_coll_score_map.c
src/components/cl/hier/: Makefile.am  cl_hier.h
src/components/cl/hier/allgatherv/: allgatherv.c  allgatherv.h  unpack.c
src/components/cl/urom/: Makefile.am  cl_urom.c  cl_urom.h  cl_urom_coll.c  cl_urom_coll.h  cl_urom_context.c  cl_urom_lib.c  cl_urom_memcpy.c  cl_urom_team.c
src/components/cl/urom/allgather/: allgather.c  allgather.h
src/components/cl/urom/allgatherv/: allgatherv.c  allgatherv.h
src/components/cl/urom/allreduce/: allreduce.c  allreduce.h
src/components/cl/urom/alltoall/: alltoall.c  alltoall.h  tags
src/components/cl/urom/alltoallv/: alltoallv.c  alltoallv.h
src/components/cl/urom/reduce_scatter/: reduce_scatter.c  reduce_scatter.h
src/components/cl/urom/reduce_scatterv/: reduce_scatterv.c  reduce_scatterv.h
src/components/tl/ucp/: Makefile.am  tl_ucp.c  tl_ucp_coll.c  tl_ucp_coll.h  tl_ucp_context.c
src/components/tl/ucp/allgather/: allgather.c  allgather.h  allgather_nsarka.c  allgather_nsarka_setup.c  allgather_ring.c
src/components/tl/ucp/allgatherv/: allgatherv.c  (+3 more)
src/components/topo/: ucc_sbgp.c
src/core/: ucc_coll.c
src/utils/: ucc_coll_utils.c
test/gtest/: Makefile.am
test/gtest/coll/: test_allgatherv.cc  test_allreduce_sliding_window.cc  test_allreduce_sliding_window.h  test_reduce.cc
test/gtest/common/: test_ucc.cc  test_ucc.h
test/gtest/core/: test_mc_cuda.cc
(+20 files in other folders)
